# swagger.json
@@ -314,7 +314,7 @@
         }
       }
     },
-    "/characters/search/{name}": {
+    "/characters/search": {
       "get": {
         "summary": "Busca um personagem pelo nome",
         "description": "Rota responsável por buscar um personagem pelo nome",
@@ -322,9 +322,10 @@
         "security": [{ "bearerAuth": [] }],
         "parameters": [
           {
-            "name": "nome",
-            "in": "path",
-            "description": "Nome do personagem para a busca",
+            "name": "name",
+            "in": "query",
+            "type": "string",
+            "description": "Busca de personagens pelo nome.",
             "required": true
           }
         ],
@@ -343,8 +344,10 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "$ref": "#/components/schemas/Character"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Character"
+                  }
                 }
               }
             }
